--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Site is temporarily unavailable.</h1>
             <p>Scheduled maintenance is currently in progress. Please check back soon.</p>
             <p>We apologize for any inconvenience.</p>
-            <p id="signature">&mdash; <a href="https://www.purp1e.ml/">Purp1e</a></p>
+            <p id="signature">&mdash; <a href="https://samudr4.github.io/purp1eweb/">Purp1e</a></p>
         </article>
     </body>
 </html>
